# arm

./: README.md
my_ws/: README.md
my_ws/install/: local_setup.sh  setup.sh
my_ws/install/gazebo_grasp_plugin/share/gazebo_grasp_plugin/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/gazebo_grasp_plugin_ros/lib/gazebo_grasp_plugin_ros/: grasp_event_republisher
my_ws/install/gazebo_grasp_plugin_ros/share/gazebo_grasp_plugin_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/install/gazebo_version_helpers/include/gazebo_version_helpers/: GazeboVersionHelpers.h
my_ws/install/gazebo_version_helpers/share/gazebo_version_helpers/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
my_ws/install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
my_ws/install/realsense_gazebo_plugin/share/realsense_gazebo_plugin/: local_setup.sh  package.sh
my_ws/install/robotiq_description/lib/robotiq_description/: test_gripper_in_gazebo
my_ws/install/robotiq_description/share/robotiq_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
my_ws/install/robotiq_moveit_config/share/robotiq_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/install/ur5e_gripper_control/lib/ur5e_gripper_control/: demo
my_ws/install/ur5e_gripper_control/share/ur5e_gripper_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/install/ur_bringup/share/ur_bringup/: package.bash  package.dsv  (+4 more)
my_ws/log/: latest_build  latest_list
my_ws/src/MCP/: README.md  mcp_client.py  server.py  voice_mcp_pipeline.py
my_ws/src/audio_record_pkg/: README.md  package.xml  setup.cfg  setup.py
my_ws/src/audio_record_pkg/audio_record_pkg/: audio_record.py  deepseek_api.py  edge_tts_demo.py  math_ask_api.py  pyttx3_demo.py  voice_chat_pipeline.py  whisper_asr.py
my_ws/src/my_yolov11/: README.md
my_ws/src/my_yolov11/configs/: cube_detect.yaml
my_ws/src/my_yolov11/tools/: copy_best_to_vision.py  predict_image.py  record_ros_images.py  split_dataset.py  train.py  validate_dataset.py
my_ws/src/ur5e_gripper_control/: CMakeLists.txt  package.xml
my_ws/src/ur5e_gripper_control/launch/: demo.launch.py
my_ws/src/ur5e_gripper_control/src/: demo.cpp  ur5e_gripper.cpp
my_ws/src/ur5e_gripper_moveit_config/config/: sensors_3d.yaml
my_ws/src/ur5e_gripper_moveit_config/gazebo/: sim_env.world
my_ws/src/ur5e_gripper_moveit_config/launch/: ur5e_gripper_moveit.launch.py
my_ws/src/ur5e_gripper_moveit_config/rviz/: view_robot.rviz
my_ws/src/ur5e_gripper_moveit_config/urdf/: ur5e_gripper.urdf.xacro
my_ws/src/ur5e_pick_place_control/: CMakeLists.txt  README.md  package.xml
my_ws/src/ur5e_pick_place_control/config/: place_zone_poses.yaml
my_ws/src/ur5e_pick_place_control/include/ur5e_pick_place_control/: ur5e_pick_place.h
my_ws/src/ur5e_pick_place_control/launch/: pick_place_demo.launch.py  start_pick_place.launch.py
my_ws/src/ur5e_pick_place_control/src/: pick_place_demo.cpp  ur5e_pick_place.cpp
my_ws/src/ur_bringup/: setup.cfg  setup.py
my_ws/src/ur_bringup/launch/: simulation.launch.py  start_grasp.launch.py  voice_triggered_grasp.launch.py
my_ws/src/ur_bringup/ur_bringup/: voice_grasp_session.py
my_ws/src/vision/: package.xml  setup.py
my_ws/src/vision/launch/: register_depth.launch.py  seg_and_det.launch.py
my_ws/src/vision/vision/: obj_detect.py  openai_selector.py  point_cloud_processor.py  wrist_yaw_estimator.py
my_ws/src/voice_grasp_bridge/: README.md  package.xml  setup.cfg  setup.py
my_ws/src/voice_grasp_bridge/launch/: voice_grasp_command.launch.py  voice_llm_command.launch.py
my_ws/src/voice_grasp_bridge/resource/: voice_grasp_bridge
my_ws/src/voice_grasp_bridge/voice_grasp_bridge/: voice_grasp_command.py  voice_llm_command.py
my_ws/src/voice_grasp_bringup/: README.md  package.xml  setup.cfg  setup.py
my_ws/src/voice_grasp_bringup/launch/: voice_grasp_system.launch.py
my_ws/src/voice_grasp_bringup/resource/: voice_grasp_bringup
my_ws/src/voice_pick_bridge/: README.md  package.xml  setup.cfg  setup.py
my_ws/src/voice_pick_bridge/launch/: voice_pick_command.launch.py  voice_pick_llm_command.launch.py
my_ws/src/voice_pick_bridge/resource/: voice_pick_bridge
my_ws/src/voice_pick_bridge/voice_pick_bridge/: voice_pick_command.py  voice_pick_llm_command.py
my_ws/src/voice_pick_place_bridge/: README.md  package.xml  setup.cfg  setup.py
my_ws/src/voice_pick_place_bridge/launch/: pick_place_session.launch.py
my_ws/src/voice_pick_place_bridge/resource/: voice_pick_place_bridge
my_ws/src/voice_pick_place_bridge/voice_pick_place_bridge/: pick_place_session.py  voice_pick_place_command.py
(+307 files in other folders)
