<?xml version="1.0"?>
<package format="3">
  <name>audio_record_pkg</name>
  <version>0.0.1</version>
  <description>ROS 2 Python package for recording audio to output.wav at 16kHz.</description>
  <maintainer email="hw@example.com">hw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>python3-pyaudio</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
