<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_pick_place_control</name>
  <version>0.0.1</version>
  <description>Standalone fixed-zone pick and place control for UR5e gripper.</description>
  <maintainer email="hw@example.com">hw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ur5e_gripper_moveit_config</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
