<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_grasp_bringup</name>
  <version>0.0.1</version>
  <description>One-click bringup for simulation, safe grasp startup, and voice grasp bridge.</description>
  <maintainer email="hw@example.com">hw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>

  <exec_depend>ur_bringup</exec_depend>
  <exec_depend>voice_grasp_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
