<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_pick_place_bridge</name>
  <version>0.0.1</version>
  <description>Standalone voice bridge for fixed-zone pick and place commands.</description>
  <maintainer email="hw@example.com">hw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>ur5e_pick_place_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
